--- a/main.css
+++ b/main.css
@@ -1,13 +1,3 @@
-:root {
-  --header-color: #363636;
-  --span-h-color: #A1A9B0;
-  --paragraph-color: #8C9398;
-  --light-bg-color: #F3F5F8;
-  --dark-bg-color: #242830;
-  --primary-component-color: #3EC9B3;
-  --white: #ffff;
-}
-
 html {
   font-family: 'Varela Round', sans-serif;
   font-size: 62.5%;
@@ -21,7 +11,7 @@ html {
 }
 
 h1, h2, h3 {
-  color: var(--header-color);
+  color: #363636;
 }
 
 h1 {
@@ -31,30 +21,59 @@ h1 {
 }
 
 h1 span {
-  color: var(--span-h-color);
+  color: #A1A9B0;
 }
 
 h2, h3 {
   font-size: 1.5rem;
   font-weight: bold;
   text-transform: uppercase;
+  margin: 1rem 0;
+  padding-bottom: 3rem;
+}
+
+h2:after {
+  display: block;
+  content: url(/img/h1-bg.png);
+  text-align: center;
+  width: 100%;
+  margin-top: 5px;
+}
+
+h3::after {
+  content: "";
+  display: block;
+  width: 3.5rem;
+  border: 2px solid #3EC9B3;
+  background-color: #3EC9B3;
+  margin: 2.5px auto;
 }
 
 p {
   font-size: 1.4rem;
-  color: var(--paragraph-color);
+  line-height: 2.5rem;
+  color: #8C9398;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  text-transform: uppercase;
   font-size: 1.4rem;
+  color: #ffff;
 }
 
 header, section, footer {
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .main-nav {
@@ -65,7 +84,7 @@ header, section, footer {
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-  background-color: var(--dark-bg-color);
+  background-color: #242830;
   position: absolute;
   -webkit-transition: all .5s ease-out;
   transition: all .5s ease-out;
@@ -96,7 +115,7 @@ header, section, footer {
 }
 
 .main-nav li:hover a, .main-nav li:hover i {
-  color: var(--white);
+  color: #ffff;
 }
 
 .wrapper {
@@ -116,9 +135,6 @@ header, section, footer {
 
 .hero {
   height: 80vh;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   position: relative;
   background-image: url(/img/hero-bg.jpg);
   background-size: cover;
@@ -153,7 +169,7 @@ header, section, footer {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  background: var(--header-color);
+  background: #363636;
   border-radius: 5px;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
@@ -164,7 +180,7 @@ header, section, footer {
   content: "";
   height: 5px;
   width: 35px;
-  background-color: var(--header-color);
+  background-color: #363636;
   border-radius: 5px;
   -webkit-transition: all .5s ease;
   transition: all .5s ease;
@@ -219,5 +235,20 @@ header, section, footer {
 
 .hero__content-btn {
   margin-top: 5rem;
+  padding: 2rem 4rem;
+  background-color: #3EC9B3;
+  border-radius: 5px;
+  border-bottom: 3px solid #309383;
+  cursor: pointer;
+}
+
+.hero__content-btn:hover {
+  background-color: rgba(62, 201, 179, 0.7);
+}
+
+.introduction__container {
+  width: 65%;
+  text-align: center;
+  padding: 9rem 0;
 }
 /*# sourceMappingURL=main.css.map */
