--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,18 +1,21 @@
-:root{
-    --header-color: #363636;
+// Colors
+$header-color: #363636;
 
-    --span-h-color: #A1A9B0;
-    --paragraph-color: #8C9398;
+$span-h-color: #A1A9B0;
+$paragraph-color: #8C9398;
 
-    --light-bg-color: #F3F5F8;
-    --dark-bg-color: #242830;
+$light-bg-color: #F3F5F8;
+$dark-bg-color: #242830;
 
-    --primary-component-color: #3EC9B3;
-    --white: #ffff;
-}
+$primary-component-color: #3EC9B3;
+$white: #ffff;
+
 
 $container-width: 65%;
+$container-padding: 9rem 0;
+
 $small-margin: 1.5rem;
+$btn-padding: 2rem 4rem;
 
 html{
     font-family: 'Varela Round', sans-serif;
@@ -24,10 +27,3 @@ html{
     padding: 0;
     box-sizing: border-box;
 }
-
-// Text Colors
-
-// main font color : #363636
-// secondary font color: #A1A9B0
-// h2 font color: #E7EAF0
-// p font color: #8C9398;
