--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -16,7 +16,11 @@ h2, h3{
     font-size: 1.5rem;
     font-weight: bold;
     text-transform: uppercase;
-    margin: 1rem 0;
+    margin: 1.2rem 0;
+    letter-spacing: 1px;
+}
+
+h2{
     padding-bottom: 3rem;
 }
 
@@ -25,7 +29,7 @@ h2:after{
     content: url(/img/h1-bg.png);
     text-align: center;
     width: 100%;
-    margin-top: 5px;
+    margin-top: 1.5rem;
 }
 h3::after{
     content: "";
@@ -33,17 +37,19 @@ h3::after{
     width: 3.5rem;
     border: 2px solid $primary-component-color;
     background-color: $primary-component-color;
-    margin: 2.5px auto;
+    margin: 2.5rem auto;
 }
 
 p{
     font-size: 1.4rem;
     line-height: 2.5rem;
     color: $paragraph-color;
+    letter-spacing: 1px;
 }
 a{
     text-decoration: none;
     text-transform: uppercase;
     font-size: 1.4rem;
     color: $white;
+    letter-spacing: 1px;
 }
